--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -1,7 +1,9 @@
+/* 'body' selector for overall background color */
 body {
     background-color: white;
 }
 
+/* border ONLY selector */
 .border {
     background-color: #f9c702;
     margin-left: -10px;
@@ -9,6 +11,7 @@ body {
     margin-top: -10px; 
 }
 
+/* elements within border e.g. home, quiz etc */
 .panel {
     display: flex;
     margin-left: 50px;
@@ -32,4 +35,27 @@ body {
     -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, 
       from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
     position: relative; bottom: -50px;
+}
+
+.flag-lang a {
+    position: relative; bottom: -30px; left: 350px;
+}
+
+.lang {
+    display: none;
+    position: absolute; left: 1273px; bottom: 514px;
+    background-color: #f9f9f9;
+    height: 60px;
+    min-width: 98px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 1px 1px;
+    z-index: 1;
+}
+
+.lang h5 {
+    position: absolute; bottom: -20px; left: 15px;
+}
+
+.flag-lang:hover .lang {
+    display: inline-block;
 }
