create duplicate of 'homepage.html' and 'homepage.css' text files in french language and name it with an '_(language abbreviation) e.g. 'homepage_fr.html'

--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -56,6 +56,10 @@ body {
     position: absolute; bottom: -20px; left: 15px;
 }
 
+.lang a {
+    position: relative; bottom: -20px; left: -1px;
+}
+
 .flag-lang:hover .lang {
-    display: inline-block;
+    display: block;
 }
