--- a/homepage/quiz/level1/question1.css
+++ b/homepage/quiz/level1/question1.css
@@ -1,6 +1,4 @@
 /* top border content selectors only */
-
-
 .border {
     background-color: #f9c702;
     margin-left: -10px;
@@ -70,6 +68,7 @@ body.wrong {
     --hue: var(--hue-wrong); /* for when answer is wrong */
 }
 
+/* container for elements within quiz */
 .container {
     height: 500px;
     width: 800px;
@@ -102,5 +101,38 @@ body.wrong {
     --hue: var(--hue-neutral);
     border: 1px solid hsl(var(--hue), 100%, 30%);
     background-color: hsl(var(--hue), 100%, 50%);
+    border-radius: 5px;
+    padding: 5px 10px;
+    color: white;
+    outline: none;
+}
+
+.btn:hover {
+    border-color: black;
+    color: black;
+}
+
+.btn.correct {
+    --hue: var(--hue-correct);
+}
+
+.btn.wrong {
+    --hue: var(--hue-wrong);
+}
+
+.start-btn, .next-btn {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
+}
+
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
 }
 
