--- a/homepage/quiz/level1/question1.css
+++ b/homepage/quiz/level1/question1.css
@@ -70,18 +70,19 @@ body.wrong {
 
 /* container for elements within quiz */
 .container {
-    height: 70px;
-    width: 800px;
+    height: 500px;
+    width: 900px;
     max-width: 80%;
     background-color: white;
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 10px 2px;
-    position: relative; top: 230px; left: 310px;
+    position: relative; top: 50px; left: 300px;
 }
 
 #question {
     font-size: 30px;
+    position: relative; top: 60px;
 }
 
 .btn-grid {
@@ -130,9 +131,11 @@ body.wrong {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative; top: 180px;
 }
 
 .hide {
     display: none;
 }
+
 
