--- a/homepage/quiz/level1/question1.css
+++ b/homepage/quiz/level1/question1.css
@@ -15,8 +15,13 @@
     font-size: 30px;
 }
 
+.panel a {
+    color: black;
+    text-decoration: none;
+}
+
 .flag-lang a {
-    position: relative; bottom: -30px; left: 350px;
+    position: relative; bottom: -30px; left: 963px;
 }
 
 .lang {
