--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -9,6 +9,7 @@ body {
     margin-left: -10px;
     margin-right: -50px;
     margin-top: -10px; 
+    max-width: 115%;
 }
 
 /* elements within border e.g. home, quiz etc */
@@ -68,4 +69,77 @@ body {
 
 .flag-lang:hover .lang {
     display: block;
+}
+
+/* Panel-three onwards only */
+
+.two {
+    background-image: linear-gradient(#369eff, white);
+    height: 500px;
+    margin-left: -60px;
+    text-align: center;
+    position: relative; top: 250px;
+}
+
+.two p {
+    position: relative; top: 200px;
+}
+
+.bottom-border {
+    background-color: #f9c702;
+    width: 1482px;
+    height: 181px;
+    padding-top: 30px;
+    margin-top: -12.5px;
+    margin-left: -8px;
+    position: relative; top: 250px;
+}
+
+.bottom-container {
+    position: relative; left: -580px; top: -20px;
+}
+
+#email {
+    display: flex;
+    gap: 5px;
+}
+
+#email img {
+    position: relative; left: 600px; top: 16px;
+}
+
+#email h5 a {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    position: relative; left: 600px; top: -5px;
+    text-decoration: none;
+    color: black;
+}
+
+#linkedin {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    gap: 5px;
+    position: relative; left: 600px; top: 5px;
+}
+
+#linkedin h5 a {
+    font-size: 20px;
+    position: relative; top: -19px;
+    color: black;
+    text-decoration: none;
+}
+
+#github {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    gap: 5px;
+    position: relative; left: 600px; top: -2px;
+}
+
+#github h5 a {
+    font-size: 20px;
+    position: relative; top: -20px;
+    color: black;
+    text-decoration: none;
 }
