replicate changes made 'homepage.html and homepage.css' and add them to 'homepage_fr.html and homepage_fr.css'

--- a/homepage/homepage_fr.css
+++ b/homepage/homepage_fr.css
@@ -1,14 +1,17 @@
 /* 'body' selector for overall background color */
-body {
+html, body {
     background-color: white;
+    margin: 0;
 }
 
 /* border ONLY selector */
 .border {
     background-color: #f9c702;
+    height: 119px;
     margin-left: -10px;
-    margin-right: -50px;
+    margin-right: -140px;
     margin-top: -10px; 
+    max-width: 115%;
 }
 
 /* elements within border e.g. home, quiz etc */
@@ -20,9 +23,20 @@ body {
     font-size: 30px;
 }
 
+
+.panel h5 {
+    position: relative; right: -875px; top: 7px;
+}
+
+.panel #quiz {
+    position: relative; left: -8px;
+}
+
 .panel a {
     color: black;
     text-decoration: none;
+    position: relative; top: 8px; left: 8px;
+    gap: 10px;
 }
 
 .panel-two {
@@ -39,11 +53,11 @@ body {
 .flags img {
     -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, 
       from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
-    position: relative; bottom: -50px; left: -89.5px;
+    position: relative; bottom: -50px; left: -105.5px
 }
 
-.flag-lang a {
-    position: relative; bottom: -30px; left: 902px;
+.flag-lang a img {
+    position: relative; bottom: -30px; left: 821.5px;
 }
 
 .lang {
@@ -58,13 +72,95 @@ body {
 }
 
 .lang h5 {
-    position: absolute; bottom: -15px; left: 14px;
+    position: absolute; top: -36px; left: 17px;
 }
 
 .lang a {
-    position: absolute; bottom: -5px; left: 0px;
+    position: relative; bottom: -10px; left: -4px;
+    text-decoration: none;
 }
 
 .flag-lang:hover .lang {
-    display: inline-block;
+    display: block;
+}
+
+/* Panel-three onwards only */
+.two {
+    background-image: linear-gradient(#369eff, white);
+    height: 500px;
+    margin-left: -60px;
+    margin-right: -90px;
+    text-align: center;
+    position: relative; top: 250px;
+}
+
+.two p {
+    position: relative; top: 200px;
+}
+
+/* bottom border selctors only */
+.bottom-border {
+    background-color: #f9c702;
+    max-width: 120%;
+    width: 1502px;
+    height: 181px;
+    padding-top: 30px;
+    margin-top: -12.5px;
+    margin-left: -30px;
+    position: relative; top: 250px; 
+}
+
+.bottom-container {
+    position: relative; left: -580px; top: -20px;
+    margin-right: -50px;
+}
+
+#email {
+    display: flex;
+    gap: 5px;
+    position: relative; left: 30px;
+}
+
+#email img {
+    position: relative; left: 600px; top: 16px;
+}
+
+#email h5 a {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    position: relative; left: 600px; top: -5px;
+    text-decoration: none;
+    color: black;
+}
+
+#linkedin {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    gap: 5px;
+    position: relative; left: 630px; top: 5px;
+}
+
+#linkedin h5 a {
+    font-size: 20px;
+    position: relative; top: -19px;
+    color: black;
+    text-decoration: none;
+}
+
+#github {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    gap: 5px;
+    position: relative; left: 630px; top: -2px;
+}
+
+#github h5 a {
+    font-size: 20px;
+    position: relative; top: -20px;
+    color: black;
+    text-decoration: none;
+}
+
+.bottom-border.two {
+    width: 200px;
 }
