--- a/homepage/quiz/quiz.css
+++ b/homepage/quiz/quiz.css
@@ -1,14 +1,20 @@
-body {
-    background-color:#f9c702;
+/* 'body' selector for overall background color */
+html, body {
+    background-color: white;
+    margin: 0;
 }
 
+/* border ONLY selector */
 .border {
     background-color: #f9c702;
+    height: 119px;
     margin-left: -10px;
-    margin-right: -50px;
+    margin-right: -110px;
     margin-top: -10px; 
+    max-width: 115%;
 }
 
+/* elements within border e.g. home, quiz etc */
 .panel {
     display: flex;
     margin-left: 50px;
@@ -17,13 +23,18 @@ body {
     font-size: 30px;
 }
 
+.panel h5 {
+    position: relative; right: -920px; top: 7px;
+}
+
 .panel a {
     color: black;
     text-decoration: none;
+    position: relative; top: 8px; left: 8px;
 }
 
-.flag-lang a {
-    position: relative; bottom: -30px; left: 963px;
+.flag-lang a img {
+    position: relative; bottom: -30px; left: 864px;
 }
 
 .lang {
@@ -38,7 +49,7 @@ body {
 }
 
 .lang h5 {
-    position: absolute; bottom: -10px; left: 17px;
+    position: absolute; top: -36px; left: 17px;
 }
 
 .lang a {
