--- a/homepage/quiz/quiz.css
+++ b/homepage/quiz/quiz.css
@@ -1,7 +1,5 @@
-/* 'body' selector for overall background color */
-html, body {
-    background-color: white;
-    margin: 0;
+body {
+    background-color:#f9c702;
 }
 
 /* border ONLY selector */
@@ -24,13 +22,13 @@ html, body {
 }
 
 .panel h5 {
-    position: relative; right: -920px; top: 7px;
+    position: relative; right: -912px; top: -1px;
 }
 
 .panel a {
     color: black;
     text-decoration: none;
-    position: relative; top: 8px; left: 8px;
+    position: relative; top: 0px; left: 0px;
 }
 
 .flag-lang a img {
@@ -49,7 +47,7 @@ html, body {
 }
 
 .lang h5 {
-    position: absolute; top: -36px; left: 17px;
+    position: absolute; top: -28px; left: 17px;
 }
 
 .lang a {
