--- a/homepage/quiz/level1/question1.css
+++ b/homepage/quiz/level1/question1.css
@@ -1,9 +1,16 @@
-/* top border content selectors only */
+html, body {
+    background-color: white;
+    margin: 0%;
+}
+
+/* border ONLY selector */
 .border {
     background-color: #f9c702;
+    height: 119px;
     margin-left: -10px;
-    margin-right: -50px;
+    margin-right: -110px;
     margin-top: -10px; 
+    max-width: 115%;
 }
 
 /* elements within border e.g. home, quiz etc */
@@ -15,13 +22,18 @@
     font-size: 30px;
 }
 
+.panel h5 {
+    position: relative; right: -920px; top: 7px;
+}
+
 .panel a {
     color: black;
     text-decoration: none;
+    position: relative; top: 8px; left: 8px;
 }
 
-.flag-lang a {
-    position: relative; bottom: -30px; left: 963px;
+.flag-lang a img {
+    position: relative; bottom: -30px; left: 864px;
 }
 
 .lang {
@@ -36,7 +48,7 @@
 }
 
 .lang h5 {
-    position: absolute; bottom: -10px; left: 17px;
+    position: absolute; top: -36px; left: 17px;
 }
 
 .lang a {
