--- a/quiz/quiz_fr.css
+++ b/quiz/quiz_fr.css
@@ -28,7 +28,7 @@ html, body {
 }
 
 .panel #quiz {
-    position: relative; left: -16.1px;
+    position: relative; left: -8px; top: 8px;
 }
 
 .panel a {
